# gvips

./: .gitignore  LICENCE  README.md  docs-lock.json  docs.json  meson.build  package.json  tsconfig.compile.json  tsconfig.json
gi-types/: gi.d.ts  gio2.d.ts  glib2.d.ts  gobject2.d.ts  gvipsext1.d.ts  vips8.d.ts
gvips-ext/: gvips-ext.c  gvips-ext.h  meson.build
lib/: ambient.d.ts  build-test.js  build.js  gen-gi.js
src/: base.ts  docs.ts  image.ts  index.ts  object.ts  operation.ts  value.ts  wrapper.ts
test/: generate-docs.ts  main.ts  runner.ts
